CSS/styles.css
body {
    text-align: center;
    font-family: helvetica;
}

.unjustified,
ol {
    text-align: left;
}

.left,
.right {
    display: inline-block;
}

h1 strong,
h2 strong {
    color: #f6a1b8;
    font-weight: 900;
}

h1,
h2 {
    color: #4f5e94;
    font-weight: 300;
}

h1 {
    font-size: 3em;
}

h2 {
    font-size: 2em;
}

button {
    padding: 12px 24px;
    border: 1px solid #f6a1b8;
    border-radius: 8px;
    background: #4f5e94;
    font-size: 2em;
    color: white;
}

button:disabled {
    opacity: 20%;
}

button:hover {
    background: #f6a1b8;
    color: #4f5e94;
}

a.button {
    padding: 12px 24px;
    border: 1px solid #f6a1b8;
    border-radius: 8px;
    background: #4f5e94;
    font-size: 2em;
    color: white;
}

a.button.disabled {
    opacity: 20%;
    cursor: not-allowed;
}

a.button:hover {
    background: #f6a1b8;
    color: #4f5e94;
}

.video {
    width: 130px;
    height: auto;
    position: relative;
    display: inline-block;
    max-width: 100%;
}

.video .hovered-img {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 99;
}

.video:hover .hovered-img {
    display: inline;
}

